# MetaDogeUnity-Fuel

./: Cargo.toml  Forc.toml  README.md  split_coins.rs
src/: main.sw
